--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h1>YXDu01's blog</h1>
-<p>under construction</p>
+<html>
+
+<head>YXDu's blog</head>
+
+<body>
+  <h1>YXDu01's blog</h1>
+  <p>under construction</p>
+</body>
+</html>
