--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head></head>
 
 <body>
+  <ul>
+        <li><a href="index.html">D</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
   <h1>YXDu01's blog</h1>
   <p>under construction</p>
 </body>
