--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
 <html>
 
-<head></head>
+<head>
+	<meta charset="utf-8">
+	<title>YXDu</title>
+</head>
 
 <body>
-  <ul>
-        <li><a href="index.html">D</a></li>
+  <ul class="nav">
+        <li><a href="index.html" style="font-size: 50px;font-family:Algerian;background-color:aqua">D</a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
   <h1>YXDu01's blog</h1>
-  <p>under construction</p>
+	<p>a high school student at No.2 High School of East China Normal University</p>
+	<p>HTML/Python/StableDiffusion/Design</p>
+	<hr>
+	<p>under construction</p>
 
-  
+  <style>
+	 body {
+		font-family:"Gotham"; 
+	  }
+	.nav {
+		padding: 0;
+		margin: 0;
+		overflow: hidden;
+		background-color: aliceblue;
+}
+	.nav li {
+		list-style: none;
+		float:left;
+}
+	.nav li>a:hover {
+		background-color: #5952EF;
+		color: #ffffff;
+}
+	.nav a {
+		line-height: 70px;
+		margin: 0 auto;
+		text-decoration: none;
+		padding: 25px;
+		color:darkslateblue
+	  }
+	</style>
 </body>
 </html>
